// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline props timelineAvatar defaults to an avatar with a \`userAvatar\` icon 1`] = `
<div
  aria-label=""
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
  role="img"
  title=""
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="user"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineAvatar is rendered with a ReactNode 1`] = `
<div
  aria-label="username"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
  role="img"
  title="username"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="userAvatar"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineAvatar is rendered with a string 1`] = `
<div
  aria-label=""
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
  role="img"
  title=""
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  />
</div>
`;

exports[`EuiCommentTimeline props timelineAvatar is rendered with timelineAvatarAriaLabel 1`] = `
<div
  aria-label="timelineAvatarAriaLabel"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
  role="img"
  title="timelineAvatarAriaLabel"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  />
</div>
`;
